--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
   <artifactId>loop</artifactId>
   <packaging>jar</packaging>
   <version>1.0</version>
-  <name>loop</name>
+  <value>loop</value>
   <url>http://looplang.org</url>
 
   <dependencies>
     <dependency>
       <groupId>org.mvel</groupId>
       <artifactId>mvel2</artifactId>
-      <version>2.0.16</version>
+      <version>2.1.Beta6</version>
     </dependency>
   </dependencies>
 
