--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
       <artifactId>mvel2</artifactId>
       <version>2.1.Beta6</version>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>1.4</version>
+    </dependency>
   </dependencies>
 
   <build>
