--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
       <artifactId>commons-io</artifactId>
       <version>1.4</version>
     </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.8.2</version>
+    </dependency>
   </dependencies>
 
   <build>
