--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <dependency>
       <groupId>org.mvel</groupId>
       <artifactId>mvel2</artifactId>
-      <version>2.1.Beta6</version>
+      <version>2.1.Beta8</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
@@ -33,6 +33,7 @@
     <testSourceDirectory>test</testSourceDirectory>
     <plugins>
       <plugin>
+        <version>2.3.2</version>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
           <source>1.6</source>
