--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,6 @@
       <version>4.0</version>
     </dependency>
     <dependency>
-      <groupId>org.mvel</groupId>
-      <artifactId>mvel2</artifactId>
-      <version>2.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>1.4</version>
@@ -35,6 +30,13 @@
       <version>2.5</version>
     </dependency>
 
+
+    <dependency>
+      <groupId>org.mvel</groupId>
+      <artifactId>mvel2</artifactId>
+      <version>2.1-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -81,7 +83,6 @@
             </goals>
             <configuration>
               <includes>
-                <include>*:mvel2</include>
                 <include>*:commons-io</include>
                 <include>*:jline</include>
               </includes>
@@ -89,10 +90,6 @@
                 <rule>
                   <pattern>org.apache.commons.**.*</pattern>
                   <result>loop.internal.cio.@1.$@2</result>
-                </rule>
-                <rule>
-                  <pattern>org.mvel2.**.*</pattern>
-                  <result>loop.internal.mvel2.@1.$@2</result>
                 </rule>
                 <keep>
                   <pattern>loop.*</pattern>
