Early fixes for loopshell

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
   <build>
     <sourceDirectory>src</sourceDirectory>
     <testSourceDirectory>test</testSourceDirectory>
+    <resources>
+      <resource>
+        <directory>resources</directory>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <version>2.3.2</version>
