--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
       <plugin>
         <groupId>org.sonatype.plugins</groupId>
         <artifactId>jarjar-maven-plugin</artifactId>
+        <version>1.5</version>
         <executions>
           <execution>
             <phase>none</phase>
