--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
       <version>4.0</version>
     </dependency>
     <dependency>
-      <groupId>org.sonatype.jline</groupId>
+      <groupId>jline</groupId>
       <artifactId>jline</artifactId>
-      <version>2.5</version>
+      <version>2.6</version>
     </dependency>
 
 
