--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@
 .idea
 reverse.loop
 target/
+
+.project
+
+.classpath
+
+.settings/org.eclipse.jdt.core.prefs
+
+.settings/org.eclipse.m2e.core.prefs
