--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,13 @@
   <version>1.0</version>
   <url>http://looplang.org</url>
 
+  <repositories>
+    <repository>
+      <id>codehaus</id>
+      <url>http://repository.codehaus.org</url>
+    </repository>
+  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>org.ow2.asm</groupId>
