--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <dependency>
       <groupId>org.mvel</groupId>
       <artifactId>mvel2</artifactId>
-      <version>2.1-SNAPSHOT</version>
+      <version>2.1.Beta8</version>
       <scope>test</scope>
     </dependency>
     <dependency>
