--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,10 @@
   <repositories>
     <repository>
       <id>codehaus</id>
-      <url>http://repository.codehaus.org</url>
+      <url>http://snapshots.repository.codehaus.org/</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
     </repository>
   </repositories>
 
@@ -36,7 +39,7 @@
     <dependency>
       <groupId>org.mvel</groupId>
       <artifactId>mvel2</artifactId>
-      <version>2.1.Beta8</version>
+      <version>2.1-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
